[package]
name = "rc_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
once_cell = "1.19.0"

[profile.bench]
debug = true

[[bench]]
name = "normalize"
harness = false
